<resources>
    <string name="app_name">Rent a Gown</string>
    <string name="todo">todo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_booking">Booking</string>
    <string name="nav_profile">Profile</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="price_booking">Price :</string>
    <string name="dp_paid_booking">DP Paid :</string>
    <string name="remaining_bills_booking">Remaining Bills :</string>
    <string name="btn_fitting_size">Fitting Size Gown</string>
    <string name="btn_book_now">BOOK NOW</string>
    <string name="btn_next">Next</string>
    <string name="btn_get_started">Get Started</string>
    <string name="btn_skip">Skip</string>
    <string name="discover">Discover</string>
    <string name="btn_see_all_main">See All</string>
    <string name="tv_title_special_promo_for_you">Special Promo For You</string>
    <string name="tv_title_favorite_gown">Favorite Gown</string>
    <string name="tv_title_new_gown">New Gown</string>
    <string name="appbar_cart">Cart</string>
    <string name="info_cart">Maximum return of goods is 7 days from start date of booking.
        25% charge will be applied for 14 days booking from start date of booking. 50% charge will be
        applied for 21 days booking from start date.</string>
    <string name="tv_title_total_price">Total Price</string>
    <string name="tv_total_price">Rp. 0</string>
    <string name="btn_checkout_cart">Checkout</string>
    <string name="title_personal">Personal</string>
    <string name="menu_invoice_history">Invoice History</string>
    <string name="menu_transaction_status">Transaction Status</string>
    <string name="menu_settings">Settings</string>
    <string name="title_support">Support</string>
    <string name="menu_help_center">Help Center</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_and_conditions">Terms and Conditions</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="app_version_1_0">App version 1.0</string>
    <string name="name_user">John Doe</string>
    <string name="email_user">john.doe@gmail.com</string>
    <string name="my_booking">My Booking</string>
    <string name="btn_history">History</string>
    <string name="tv_desc_booking_empty">Add your booking to booking list and start ordering</string>
    <string name="btn_browse">Browse</string>
    <string name="tv_title_booking_empty">Your Booking Is Currently Empty</string>
    <string name="appbar_notification">Notification</string>
    <string name="appbar_invoice_history">Invoice History</string>
    <string name="text_invoice_empty">Sorry, currently we can\'t display your requested invoice. Please try again by reloading this page.</string>
    <string name="appbar_settings">Settings</string>
    <string name="title_general">General</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_address">Change Address</string>
    <string name="title_notifications">Notifications</string>
    <string name="catalog_updates">Catalog Updates</string>
    <string name="promo">Promo</string>
    <string name="transactions">Transactions</string>
    <string name="appbar_help_center">Help Center</string>
    <string name="appbar_privacy_policy">Privacy Policy</string>
    <string name="appbar_terms_condition">Terms and Condition</string>
    <string name="appbar_edit_profile">Edit Profile</string>
    <string name="btn_edit">Edit</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="btn_save">Save</string>
    <string name="appbar_change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="create_a_strong_password_for_the_account_by_email">Create a strong password for the account by email</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_re_password">Re-Password</string>
    <string name="after_password_has_been_changed_please_log_in_again_with_the_new_on_all_of_your_devices">After password has been changed, please log in again with the new on all of your devices</string>
    <string name="appbar_change_address">Change Address</string>
    <string name="appbar_change_bank">Change Bank</string>
    <string name="address_default">Default</string>
    <string name="btn_choose_address">Select Address</string>
    <string name="btn_choose_bank">Choose Bank</string>
    <string name="appbar_add_address">Add Address</string>
    <string name="hint_address_label">Address Label</string>
    <string name="hint_address">Address</string>
    <string name="hint_name_address">Name</string>
    <string name="hint_no_handphone_address">No. Handphone</string>
    <string name="appbar_wishlist">Wishlist</string>
    <string name="tv_title_wishlist_empty">YOUR WISHLIST IS CURRENTLY EMPTY</string>
    <string name="tv_desc_wishlist_empty">Add your favorites to wishlist and start building your personal collections</string>
    <string name="appbar_gown">Gown</string>
    <string name="appbar_filter">Filter</string>
    <string name="btn_reset_filter">Reset</string>
    <string name="btn_apply">Apply</string>
    <string name="chip_paling_sesuai">Paling Sesuai</string>
    <string name="chip_terbaru">Latest</string>
    <string name="chip_harga_tertinggi">Highest Price</string>
    <string name="chip_harga_terendah">Lowest Price</string>
    <string name="title_price">Price</string>
    <string name="et_harga_terendah">Lowest</string>
    <string name="et_harga_tertinggi">Highest</string>
    <string name="chip_50_rb_100_rb">50 rb - 100 rb</string>
    <string name="chip_100_rb_150_rb">100 rb - 150 rb</string>
    <string name="chip_150_rb_200_rb">150 rb - 200 rb</string>
    <string name="tv_title_login">Login</string>
    <string name="et_email_login">Email</string>
    <string name="et_password_login">Password</string>
    <string name="btn_forgot_password">Forgot Password ?</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="btn_to_sign_up">Sign Up</string>
    <string name="tv_title_register">Register</string>
    <string name="et_name_register">Name</string>
    <string name="et_email_register">Email</string>
    <string name="et_no_handphone">No. Handphone</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="btn_to_sign_in">Sign In</string>
    <string name="tv_title_forgot_password">Forgot Password</string>
    <string name="enter_the_email_address_associated_with_your_account">Enter the email address associated with your account.</string>
    <string name="we_will_email_you_a_link_reset_your_password">We will email you a link reset your password</string>
    <string name="btn_send_email">Send</string>
    <string name="btn_back_sign_in">Sign In</string>
    <string name="didn_t_receive_the_link">Didn\'t receive the link?</string>
    <string name="btn_resend_link">Resend</string>
    <string name="please_check_your_inbox_and_click_in_the_receive_link_to_reset_a_password">Please check your inbox and click in the receive link to reset a password</string>
    <string name="tv_title_email_has_been_sent">Email has been sent!</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="special_treatment">Special Treatment</string>
    <string name="one_day_service">One-day service</string>
    <string name="harga_sudah_termasuk_veil_dan_balero_dan_gratis_peminjaman_aksesoris">Price includes veil and balero. Free borrowing accessories.</string>
    <string name="name_view_product">Selina Colourblock Camisole Dress</string>
    <string name="btn_booking_now">Book Now</string>
    <string name="btn_see_all_review">See All</string>
    <string name="btn_see_no_available_dates">See Unavailable Dates</string>
    <string name="title_start_date">START DATE</string>
    <string name="title_end_date">END DATE</string>
    <string name="btn_add_to_wishlist">Add to Wishlist</string>
    <string name="appbar_your_booking">Your Booking</string>
    <string name="info_your_booking">Maximum return of goods is 7 days after the date of booking, which is 16 September 2020 (Office Hours).</string>
    <string name="tv_title_total_price_your_booking">Total Price</string>
    <string name="tv_total_price_your_booking">Rp. 0</string>
    <string name="btn_checkout">Checkout</string>
    <string name="appbar_payment">Payment</string>
    <string name="title_shipping_address">Shipping Address</string>
    <string name="btn_change_address">Change Address</string>
    <string name="btn_add_address">Select Address</string>
    <string name="label_rumah">Rumah</string>
    <string name="label_name">John Doe</string>
    <string name="label_no_hp">(6287871180436)</string>
    <string name="label_address">Perum. Visenda, Jl. K.H. Hasyim, Kec. Kembangan, Kota Jakarta Barat, DKI Jakarta.</string>
    <string name="title_payment_methods">Payment Methods</string>
    <string name="current_method">CURRENT METHOD</string>
    <string name="default_method">Default Method</string>
    <string name="available_bank_account_number_you_transfer_to">Available bank account number you transfer to</string>
    <string name="transfer_bank_bca">Transfer Bank BCA</string>
    <string name="account_name">John Doe</string>
    <string name="account_number">5496523645</string>
    <string name="title_payment_summary">Payment Summary</string>
    <string name="payment_deposit_booking">Remaining Bills</string>
    <string name="payment_total">Total</string>
    <string name="title_select_payment_method">Select Payment Method</string>
    <string name="deposit_booking_transfer">Down Payment (Transfer)</string>
    <string name="full_payment_transfer">Full Payment (Transfer)</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_payment">Payment</string>
    <string name="appbar_confirm_payment">Confirm Payment</string>
    <string name="payment_deadline">Payment Deadline</string>
    <string name="full_payment">Payment - Full Payment</string>
    <string name="p_down_payment">Payment - Down Payment</string>
    <string name="booking_date">Booking Date</string>
    <string name="gown_name">Gown</string>
    <string name="start_date">Rent Date - start</string>
    <string name="end_date">Rent Date - end</string>
    <string name="title_pay_to">Please transfer the payment by:</string>
    <string name="due_date">Down Payment - Due Date</string>
    <string name="due_time">Down Payment - Due Time</string>
    <string name="desc_payment_deadline">Please confirm your payment before</string>
    <string name="account_number_confirm">Account Number</string>
    <string name="atas_nama">a.n John Doe</string>
    <string name="btn_invoice">INVOICE</string>
    <string name="total_price_confirm">Total</string>
</resources>