<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container_empty_placeholder"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_booking_empty"
        android:contentDescription="@string/todo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_title_booking_empty"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorBlack"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_md"
        android:text="@string/tv_desc_booking_empty"
        android:textSize="@dimen/font_sm"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/colorBlack" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_browse"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btn_browse"
        android:textSize="@dimen/font_sm"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/poppins_medium"
        android:textAllCaps="false"
        style="@style/ButtonRoundedFilledGold"/>

</LinearLayout>
