<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet_container">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_select_payment_method"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/poppins_semi_bold"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"/>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_black"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"/>

    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        
        <RadioButton
            android:id="@+id/radio_deposit_booking"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/deposit_booking_transfer"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/poppins_medium"
            android:checked="false"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_button"
            android:paddingStart="16dp"
            android:paddingEnd="18dp"/>

        <RadioButton
            android:id="@+id/radio_full_payment"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/full_payment_transfer"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/poppins_medium"
            android:checked="false"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_button"
            android:paddingStart="16dp"
            android:paddingEnd="18dp"/>
        
    </RadioGroup>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="50dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAllCaps="false"
        android:text="@string/btn_continue"
        android:textSize="16sp"
        android:textColor="@color/colorSecondary"
        android:fontFamily="@font/poppins_semi_bold" />





</LinearLayout>