<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_md">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_select_payment_method"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/poppins_semi_bold"
            android:layout_marginStart="@dimen/margin_md"/>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="@dimen/icon_button_sm"
            android:layout_height="@dimen/icon_button_sm"
            android:src="@drawable/ic_close_black"
            android:background="@android:color/transparent"
            android:layout_marginEnd="@dimen/margin_md"
            android:contentDescription="@string/todo"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_md">

        <RadioButton
            android:id="@+id/rb_payment_type_down_payment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/deposit_booking_transfer"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/poppins_medium"
            android:button="@null"
            android:drawableStart="@drawable/ic_deposit_booking"
            android:drawableEnd="@drawable/custom_radio_button"
            android:drawablePadding="16dp"
            android:paddingStart="@dimen/padding_md"
            android:paddingEnd="@dimen/padding_md"/>

        <RadioButton
            android:id="@+id/rb_payment_type_full"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/full_payment_transfer"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/poppins_medium"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_button"
            android:drawableStart="@drawable/ic_full_booking"
            android:drawablePadding="16dp"
            android:paddingStart="@dimen/padding_md"
            android:paddingEnd="@dimen/padding_md"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/margin_lg"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAllCaps="false"
        android:text="@string/btn_continue"
        android:textSize="16sp"
        android:textColor="@color/colorSecondary"
        android:fontFamily="@font/poppins_semi_bold" />

</LinearLayout>