<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.LoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/bg_content_login"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tv_title_login"
            android:textColor="@color/colorBlack"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/bg_edit_text_filled"
            android:fontFamily="@font/poppins_semi_bold"
            android:hint="@string/et_email_login"
            android:inputType="textEmailAddress"
            android:paddingStart="26dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_login"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_login"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_edit_text_filled"
                android:fontFamily="@font/poppins_semi_bold"
                android:hint="@string/et_password_login"
                android:inputType="textPassword"
                android:paddingStart="26dp"
                android:textSize="16sp"
                tools:ignore="MissingConstraints,RtlSymmetry"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/todo"
                android:padding="5dp"
                android:src="@drawable/ic_hide"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,OnClick" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_medium_italic"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_password" />

        <Button
            android:id="@+id/btn_sign_in"
            style="@style/Widget.MaterialComponents.Button"
            app:backgroundTint="@null"
            android:background="@drawable/bg_button_rounded_gold"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/btn_sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_to_layout_signup"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/btn_to_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>